--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,9 @@ dependencies:
     sdk: flutter
   flutter_cache_manager: ^3.4.1
   flutter_wallpaper_manager: ^0.0.4
+  image_picker: ^0.8.4+4
   intl: ^0.17.0
+  local_auth: ^2.3.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
