--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   image_picker: ^0.8.4+4
   intl: ^0.17.0
   local_auth: ^2.3.0
+  shared_preferences: ^2.0.10
 
 dev_dependencies:
   flutter_lints: ^3.0.0
